--- a/resource.qrc
+++ b/resource.qrc
@@ -2,4 +2,7 @@
     <qresource prefix="/resources">
         <file>resources/Payday2-logo.png</file>
     </qresource>
+    <qresource prefix="/resources">
+        <file>resources/logo.png</file>
+    </qresource>
 </RCC>
